# SimpleCppWorkflows

./: CMakeLists.txt  CMakeLists.txt.in  lcov.bat  lcov.sh  myApp.cpp  myApp.h  readme.md  test.cpp
.github/workflows/: ccpp.yml
